# Odoo_HR

./: .gitignore  README.md  package.json  run.ps1  run.sh
backend/: .env.example  MCP_HANDOFF.md  package-lock.json  package.json
backend/src/: odooClient.js  seed.js  server.js  testConnection.js
backend/src/middleware/: extractUser.js  requireRole.js
backend/src/routes/: attendance.js  employees.js  leaves.js  payroll.js
frontend/: .env  .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: agent.js  client.js
frontend/src/app/onboarding/: page.tsx
frontend/src/components/: DataTable.jsx  LoadingSkeleton.jsx  Modal.jsx  Sidebar.jsx  StatCard.jsx  StatusBadge.jsx  TopBar.jsx
frontend/src/components/ui/: badge.tsx  button.tsx  (+2 more)
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: DashboardLayout.jsx
frontend/src/lib/: api.ts
frontend/src/pages/: AttendancePage.jsx  CopilotPage.jsx  DashboardPage.jsx  EmployeesPage.jsx  LeavesPage.jsx  PayrollPage.jsx  ProfilePage.jsx  SignInPage.jsx  SignUpPage.jsx
server/: .env.example  .gitignore  README.md  app.py  approval_copilot.py  audit.py  client.py  intelligence.py  mock_odoo_mcp_server.py  pyproject.toml  smoke_test_mcp_plumbing.py  system_prompt.py  test_llm_safety.py  verify_phase2.py
server/odoo_hr_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/static/: index.html  landing.html
src/app/dashboard/: layout.tsx
src/components/kbar/: index.tsx
src/components/ui/: calendar.tsx
(+23 files in other folders)
