[project]
name = "odoo-hr-agent"
version = "0.2.0"
description = "Phase 2: FastAPI agent layer — HR persona, streaming chat, approval copilot, audit trail."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.116.0",
    "mcp>=1.9.4",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
